restoring, trying later

--- a/public/sedentario.html
+++ b/public/sedentario.html
@@ -73,12 +73,20 @@
     <div id="timer">45:00</div>
     <div id="content">
       <h2>Focus e Postura</h2>
-      <p>💼 Durante questa fase, concentrati sul tuo lavoro.</p>
+      <p>
+        💼 Durante questa fase, concentrati sul tuo lavoro. <br />
+        Assicurati di mantenere una postura corretta:
+      </p>
       <ul>
         <li>🪑 Siediti dritto.</li>
         <li>👣 Mantieni i piedi ben appoggiati a terra.</li>
         <li>🖥️ Regola la sedia in modo che il monitor sia all'altezza degli occhi.</li>
       </ul>
+      <img
+        src="DFW-Spine-Institute-Ergonomic-Infographic-Blog.jpg"
+        alt="Postura Corretta"
+        style="max-width: 100%; border-radius: 5px"
+      />
     </div>
     <button id="startStop">Avvia</button>
     <div id="notification"></div>
@@ -87,18 +95,53 @@
       <button id="backButton">Back</button>
     </div>
     <audio id="alertSound" src="ding-dong.wav"></audio>
-
     <script>
-      // Determina se l'utente è Master o Slave
+      /********************************************************************
+       * Gestione del ruolo master/slave tramite query string.
+       * Esempio: http://tuosito/?role=master oppure http://tuosito/?role=slave
+       ********************************************************************/
       const urlParams = new URLSearchParams(window.location.search);
-      const role = urlParams.get("role") || "slave";
+      const role = urlParams.get("role") || "slave"; // default: slave
       const isMaster = role === "master";
 
-      // Definizione delle fasi
+      // Definizione delle fasi con contenuto HTML complesso
       const phases = [
-        { name: "Lavoro", duration: 45 * 60 },
-        { name: "In piedi", duration: 10 * 60 },
-        { name: "Movimento rapido", duration: 5 * 60 }
+        {
+          name: "Lavoro",
+          duration: 45 * 60,
+          content: `
+            <h2>Focus e Postura</h2>
+            <p>💼 Durante questa fase, concentrati sul tuo lavoro. <br> Assicurati di mantenere una postura corretta:</p>
+            <ul>
+              <li>🪑 Siediti dritto.</li>
+              <li>👣 Mantieni i piedi ben appoggiati a terra.</li>
+              <li>🖥️ Regola la sedia in modo che il monitor sia all'altezza degli occhi.</li>
+            </ul>
+            <img src="DFW-Spine-Institute-Ergonomic-Infographic-Blog.jpg" alt="Postura Corretta" style="max-width:100%; border-radius: 5px;">
+          `
+        },
+        {
+          name: "In piedi",
+          duration: 10 * 60,
+          content: `
+            <h2>Alzati in piedi</h2>
+            <p>⏳ È il momento di dare una pausa alla tua schiena. Ecco alcuni suggerimenti:</p>
+            <ul>
+              <li>🚶 Se possibile, lavora in piedi.</li>
+              <li>🏠 Se devi fare qualche lavoretto in casa, è il momento.</li>
+              <li>☕ Se vuoi farti un caffè, è il momento.</li>
+            </ul>
+            <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExNXFvMmVwY21lcDNmMG1ucG43MHZuaHJxOXpjN2VyMm9xbWc5cXR1dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l2Sq0Wgv8gXX8FLYA/giphy.gif" alt="In Piedi" style="max-width:50%; border-radius: 5px;">
+          `
+        },
+        {
+          name: "Movimento rapido",
+          duration: 5 * 60,
+          content: `
+            <h2>Attività Dinamica</h2>
+            <iframe src="mini-training-sedentario.html" style="border: none;" width="75%" height="800px" title="Mini Training Sedentario"></iframe>
+          `
+        }
       ];
 
       let currentPhaseIndex = 0;
@@ -107,41 +150,40 @@
 
       const timerDisplay = document.getElementById("timer");
       const phaseDisplay = document.getElementById("phase");
+      const contentDisplay = document.getElementById("content");
       const startStopButton = document.getElementById("startStop");
 
       function updateDisplay() {
         const minutes = Math.floor(timeRemaining / 60);
         const seconds = timeRemaining % 60;
-        timerDisplay.textContent = `${minutes.toString().padStart(2, "0")}:${seconds.toString().padStart(2, "0")}`;
+        timerDisplay.textContent = `${minutes.toString().padStart(2, "0")}:${seconds
+          .toString()
+          .padStart(2, "0")}`;
         phaseDisplay.textContent = "Fase: " + phases[currentPhaseIndex].name;
+        contentDisplay.innerHTML = phases[currentPhaseIndex].content;
       }
 
+      // Funzione tick per il client master: decrementa il timer e aggiorna il server
       function tick() {
         if (timeRemaining > 0) {
           timeRemaining--;
           updateDisplay();
 
-          if (isMaster) {
-            fetch("/status", {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({
-                phase: phases[currentPhaseIndex].name,
-                timeRemaining
-              })
-            }).catch((err) => console.error("Errore aggiornamento server:", err));
-          }
+          // Aggiornamento dello stato sul server
+          fetch("/status", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              phase: phases[currentPhaseIndex].name,
+              timeRemaining
+            })
+          }).catch((err) =>
+            console.error("Errore aggiornamento server:", err)
+          );
         } else {
           stopTimer();
           document.getElementById("alertSound").play();
-
-          if (isMaster) {
-            currentPhaseIndex = (currentPhaseIndex + 1) % phases.length;
-            timeRemaining = phases[currentPhaseIndex].duration;
-            updateDisplay();
-            startStopButton.textContent = "Avvia " + phases[currentPhaseIndex].name;
-            startStopButton.disabled = false;
-          }
+          startStopButton.textContent = "Avvia Prossima Fase";
         }
       }
 
@@ -156,53 +198,73 @@
         if (timerInterval) {
           clearInterval(timerInterval);
           timerInterval = null;
-          startStopButton.textContent = "Avvia";
         }
       }
 
+      /***********************************************
+       * Logica diversa per Master e Slave
+       ***********************************************/
       if (isMaster) {
+        // Il client master controlla il timer
         startStopButton.addEventListener("click", function () {
           if (timerInterval) {
             stopTimer();
+            startStopButton.textContent = "Avvia";
           } else {
             startTimer();
-            startStopButton.disabled = true;
-            fetch("/status", {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({
-                phase: phases[currentPhaseIndex].name,
-                timeRemaining
-              })
-            }).catch((err) => console.error("Errore aggiornamento server:", err));
           }
         });
       } else {
+        // Client slave: disabilitiamo il pulsante e avviamo il polling per aggiornare lo stato
+        startStopButton.disabled = true;
         startStopButton.style.display = "none";
+
+        // Polling ogni secondo per recuperare lo stato dal server (disabilitiamo il caching)
+        setInterval(pollStatus, 1000);
       }
 
+      // Funzione di polling usata dai client slave per aggiornare lo stato
       function pollStatus() {
         fetch("/status", { cache: "no-cache" })
           .then((response) => response.json())
           .then((data) => {
-            const phaseIndex = phases.findIndex((phase) => phase.name === data.phase);
-            if (phaseIndex !== -1 && (currentPhaseIndex !== phaseIndex || timeRemaining !== data.timeRemaining)) {
+            const phaseIndex = phases.findIndex(
+              (phase) => phase.name === data.phase
+            );
+            if (phaseIndex !== -1) {
               currentPhaseIndex = phaseIndex;
               timeRemaining = data.timeRemaining;
               updateDisplay();
             }
           })
-          .catch((err) => console.error("Errore nel polling dello stato:", err));
+          .catch((err) =>
+            console.error("Errore nel polling dello stato:", err)
+          );
       }
 
-      if (!isMaster) {
-        setInterval(pollStatus, 1000);
+      // Recupera opzionalmente lo stato iniziale dal server all'avvio
+      function fetchStatusFromServer() {
+        fetch("/status", { cache: "no-cache" })
+          .then((response) => response.json())
+          .then((data) => {
+            const phaseIndex = phases.findIndex(
+              (phase) => phase.name === data.phase
+            );
+            if (phaseIndex !== -1) {
+              currentPhaseIndex = phaseIndex;
+              timeRemaining = data.timeRemaining;
+              updateDisplay();
+            }
+          })
+          .catch((err) =>
+            console.error("Errore nel recupero dello stato:", err)
+          );
       }
 
-      window.addEventListener("load", () => {
-        if (!isMaster) pollStatus();
-        updateDisplay();
-      });
+      window.addEventListener("load", fetchStatusFromServer);
+
+      // Inizializza il display
+      updateDisplay();
     </script>
   </body>
 </html>
